rnsc/test_data/integration/error/parser/type_hints/long/not_i64.rns
.class @long identifier
.super java/lang/Object
